Changed page overflow to fix scrolling

--- a/assets/scss/_styles.scss
+++ b/assets/scss/_styles.scss
@@ -8,7 +8,7 @@ $footer-height: 2em;
 html, body {
 	height: 100%;
 	max-width: 100%;
-	overflow-x: hidden;
+	overflow: auto;
 }
 body {
 	max-height: 100%;
